fix error messages not showing on initial error due to wrong display value

--- a/css/b2sharebridgetabview.scss
+++ b/css/b2sharebridgetabview.scss
@@ -64,7 +64,6 @@
 
 .b2shareBridgeTabView .errormsg {
     color: red;
-    display: none;
 }
 
 .b2shareBridgeTabView td {
